Se ajustan las imagenes

--- a/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -36,7 +36,7 @@
         ></p-button>
         <p class="text-center">
           <span>¿has olvidado tu contraseña?</span>
-          <a class="no-underline" (click)="infoContact()" > Recuperala</a>
+          <a class="no-underline a-password" (click)="infoContact()" > Recuperala</a>
         </p>
       </form>
     </ng-template>
