--- a/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-page/monitoring-page.component.html
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-page/monitoring-page.component.html
@@ -24,15 +24,49 @@
           >
             <header class="mb-3">
               <div [ngSwitch]="monitoring.subject.name">
-                <img *ngSwitchCase="'Matemáticas'" alt="Card" src="../../../../../assets/images/matematicas.jpg" alt="">
-                <img *ngSwitchCase="'Trabajo de Intervención Empresarial'" alt="Card" src="../../../../../assets/images/Trabajo empresarial.jpg" alt="">
-                <img *ngSwitchCase="'Creatividad e Innovación'" alt="Card" src="../../../../../assets/images/creatividad e innovacion.jpg" alt="">
+                <img *ngSwitchCase="'Matemáticas'" alt="Card" src="../../../../../assets/images/matematicas.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Matemáticas II'" alt="Card" src="../../../../../assets/images/matematicas.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Trabajo de Intervención Empresarial'" alt="Card" src="../../../../../assets/images/Trabajo empresarial.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Creatividad e Innovación'" alt="Card" src="../../../../../assets/images/creatividad e innovacion.jpg" height="235px" width="375px">
                 <img *ngSwitchCase="'Expresión Oral y Escrita'" alt="Card" src="../../../../../assets/images/Expresion oral y escrita.jpg" height="235px" width="375px">
-                <img *ngSwitchCase="'Deporte'" alt="Card" src="../../../../../assets/images/Deporte.jpg" alt="">
-                <img *ngSwitchCase="'Bases de Datos I'" alt="Card" src="../../../../../assets/images/Bases de Datos I.jpg" alt="">
-                <img *ngSwitchCase="'Desarrollo de Software I'" src="../../../../../assets/images/Desarrollo de Software I.jpg" alt="Card" height="265px">
-                <img *ngSwitchCase="'Desarrollo de Software II'" src="../../../../../assets/images/Desarrollo de Software II.jpg" alt="Card">
-                <img *ngSwitchCase="'Desarrollo de Software III'" src="../../../../../assets/images/Desarrollo de Software III.jpg" alt="Card">
+                <img *ngSwitchCase="'Deporte'" alt="Card" src="../../../../../assets/images/Deporte.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Bases de Datos I'" alt="Card" src="../../../../../assets/images/Bases de Datos I.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Desarrollo de Software I'" alt="Card" src="../../../../../assets/images/Desarrollo de Software I.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Desarrollo de Software II'" alt="Card" src="../../../../../assets/images/Desarrollo de Software II.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Desarrollo de Software III'" alt="Card" src="../../../../../assets/images/Desarrollo de Software III.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Introducción a la tecnología'" alt="Card" src="../../../../../assets/images/Emprendimiento e Innovación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Desarrollo Humano'" alt="Card" src="../../../../../assets/images/desarrollo_humano.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Dialogo fe y Cultura'" alt="Card" src="../../../../../assets/images/Seminario de Humanidades.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Álgebra Lineal'" alt="Card" src="../../../../../assets/images/matematicas.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Física'" alt="Card" src="../../../../../assets/images/matematicas.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Administración y Empresarismo'" alt="Card" src="../../../../../assets/images/Fundamentos de Investigación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Estadística'" alt="Card" src="../../../../../assets/images/matematicas.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Gestión de Tecnología'" alt="Card" src="../../../../../assets/images/Emprendimiento e Innovación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Bases de datos II'" alt="Card" src="../../../../../assets/images/Bases de Datos I.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Investigación en Tecnología'" alt="Card" src="../../../../../assets/images/Fundamentos de Investigación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Formulación y Evaluación de Proyectos'" alt="Card" src="../../../../../assets/images/Trabajo empresarial.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Redes de Computadores'" alt="Card" src="../../../../../assets/images/creatividad e innovacion.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Trabajo final'" alt="Card" src="../../../../../assets/images/Trabajo empresarial.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Ética'" alt="Card" src="../../../../../assets/images/Seminario de Humanidades.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Seminario de Humanidades'" alt="Card" src="../../../../../assets/images/Seminario de Humanidades.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Fundamentos de Mercadeo'" alt="Card" src="../../../../../assets/images/Fundamentos de Economía.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Fundamentos de Administración'" alt="Card" src="../../../../../assets/images/Emprendimiento e Innovación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Fundamentos de Economía'" alt="Card" src="../../../../../assets/images/Fundamentos de Economía.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Comportamiento Ideal del Consumidor'" alt="Card" src="../../../../../assets/images/Plan de Mercadeo.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Mercadeo Estratégico'" alt="Card" src="../../../../../assets/images/Mercadeo Digital.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Desarrollo de producto'" alt="Card" src="../../../../../assets/images/Plan de Mercadeo.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Fundamentos Contables y Financieros'" alt="Card" src="../../../../../assets/images/Estrategia de Precios.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Comunicaciones Integradas de Mercadeo'" alt="Card" src="../../../../../assets/images/Investigación de Mercados.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Investigación de Mercados'" alt="Card" src="../../../../../assets/images/Investigación de Mercados.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Diseño y Estrategia Promocional'" alt="Card" src="../../../../../assets/images/Diseño y Estrategia Promocional.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Emprendimiento e Innovación'" alt="Card" src="../../../../../assets/images/Emprendimiento e Innovación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Ventas y Servicio al Cliente'" alt="Card" src="../../../../../assets/images/Ventas y Servicio al Cliente.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Distribución y Logística'" alt="Card" src="../../../../../assets/images/Distribución y Logística.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Fundamentos de Investigación'" alt="Card" src="../../../../../assets/images/Fundamentos de Investigación.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Estrategia de Precios'" alt="Card" src="../../../../../assets/images/Estrategia de Precios.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Mercadeo Digital'" alt="Card" src="../../../../../assets/images/Mercadeo Digital.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Legislación Laboral y Comercial'" alt="Card" src="../../../../../assets/images/Legislación Laboral y Comercial.jpg" height="235px" width="375px">
+                <img *ngSwitchCase="'Plan de Mercadeo'" alt="Card" src="../../../../../assets/images/Plan de Mercadeo.jpg" height="235px" width="375px">
               </div>
             </header>
             <div class="text-gray-500 p-3">
